    gpg key.
  * Support git remotes where .git is a file, not a directory,
    eg when --separate-git-dir was used.
  * Limit retrying of failed transfers when forward progress is being made
    to 5, to avoid some unusual edge cases where too much retrying could
    result in far more data transfer than makes sense.
  * Retry transfers to exporttree=yes remotes same as for other remotes.

 -- Joey Hess <id@joeyh.name>  Fri, 14 Aug 2020 14:57:45 -0400

git-annex (8.20200814) upstream; urgency=medium

  * Added support for external backend programs. So if you want a hash
    that git-annex doesn't support, or something stranger, you can write a
    small program to implement it.
  * Fix a bug in find --branch in the previous version.
  * importfeed: Fix reversion that caused some '.' in filenames to be
    replaced with '_'
  * Fix a lock file descriptor leak that could occur when running commands
    like git-annex add with -J. Bug was introduced as part of a different FD
    leak fix in version 6.20160318.
  * Fix a hang when using git-annex with an old openssh 7.2p2, which had
    some weird inheriting of ssh FDs by sshd. Bug was introduced in
    git-annex version 7.20200202.7.
  * move, copy --to: Sped up seeking files by 2x.
  * drop: Sped up seeking files to drop by 2x, and also some performance
    improvements to checking numcopies.
  * Deal with unusual IFS settings in the shell scripts for linux
    standalone and OSX app.
    Thanks, Yaroslav Halchenko
  * Avoid complaining that a file with "is beyond a symbolic link"
    when the filepath is absolute and the symlink in question is not
    actually inside the git repository.
  * Slightly sped up the linux standalone bundle.
  * Support building with dlist-1.0

 -- Joey Hess <id@joeyh.name>  Mon, 10 Aug 2020 13:04:04 -0400

git-annex (8.20200720.1) upstream; urgency=medium

  * Fix a bug in find --batch in the previous version.

 -- Joey Hess <id@joeyh.name>  Mon, 20 Jul 2020 19:39:11 -0400
